--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-18.24MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇻🇳 越南-4.34MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.50MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 5502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇺🇸 美国-224.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.10MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.19MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3504, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-477.0KB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.06MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.71MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-2.99MB/s(Youtube:不良林) 2, server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-13.39MB/s(Youtube:不良林), server: bs1-1.getnjnd.com, port: 3504, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-159.1KB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇦 加拿大-964.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-624.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 23.94.212.120, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.24MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-224.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-13.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-624.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-18.24MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-224.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-13.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-624.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.24MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-224.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-13.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-624.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-18.24MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-224.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-13.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-624.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.24MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-224.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-13.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-624.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-18.24MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-224.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-13.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-624.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-18.24MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-224.3KB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.99MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-13.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-159.1KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-964.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-624.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
