--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.87MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-3.59MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 5502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-11.01MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-9.99MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 4502, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-15.24MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
+  - {name: 🇨🇳 中国-303.0KB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 6503, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-3.33MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.38MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 3045, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇨🇳 中国-14.98MB/s(Youtube:不良林), server: bs2-2.getnjnd.com, port: 6500, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇨🇳 中国-4.47MB/s(Youtube:不良林), server: nm1-2.getnjnd.com, port: 5501, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: 23.94.212.120, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.85MB/s(Youtube:不良林), server: bs2-1.getnjnd.com, port: 3508, type: ssr, cipher: chacha20-ietf, password: renzhecloud, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 152006:OeRRkC, obfs-param: MjM5MjMxNTIwMDYubWljcm9zb2Z0LmNvbQ}
   - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: 20.239.15.148, port: 63393, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 20.239.15.148, port: 11406, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-866.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-303.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-866.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-303.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-866.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-303.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-866.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-303.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-866.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-303.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-866.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-303.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-866.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-303.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-866.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
